# polymath

./: .gitignore  CMakeLists.txt  README.md
benchmark/: benchmark.txt  plot.py
src/: CMakeLists.txt  PolyMath.pro
src/benchmark/: BoostWrapper.cpp  BoostWrapper.h  ClipperWrapper.cpp  GeosWrapper.cpp  GeosWrapper.h  Main.cpp  PolyMathWrapper.cpp  PolyMathWrapper.h  Wrappers.h
src/demo/: Main.cpp
src/polymath/: Common.h  NumericalEngine.h  OutputPolicy.h  PolyMath.h  Polygon.h  PolygonPoint.h  SweepEngine.h  SweepTree.h  Vertex.h  Visualization.h  WindingEngine.h  WindingPolicy.h
src/python/: Polygon.cpp
src/testbed/: Main.cpp  MainWindow.cpp  MainWindow.h  PolyViewer.cpp  PolyViewer.h  Qt.h  TestGenerators.cpp  TestGenerators.h  Visualizer.cpp  Visualizer.h
src/testgenerators/: TestGenerators.cpp  TestGenerators.h  TypeConverter.h
src/unittests/: Main.cpp  TestWideMath.cpp
src/widemath/: Add.h  Common.h  Compare.h  Divide.h  Misc.h  Multiply.h  Negate.h  Shift.h  Sqrt.h  Subtract.h  WideMath.h
src/wrappers/: BoostWrapper.cpp  BoostWrapper.h  ClipperWrapper.cpp  ClipperWrapper.h  GeosWrapper.cpp  PolyMathWrapper.cpp  PolyMathWrapper.h  Wrappers.h
